RESOLVED FIXED 223063
Fix table-element-001.html
https://bugs.webkit.org/show_bug.cgi?id=223063
Summary Fix table-element-001.html
Rob Buis
Reported 2021-03-11 01:41:43 PST
Fix table-element-001.html.
Attachments
Patch (4.54 KB, patch)
2021-03-11 01:44 PST, Rob Buis
no flags
Patch (5.30 KB, patch)
2021-03-12 02:51 PST, Rob Buis
no flags
Rob Buis
Comment 1 2021-03-11 01:44:16 PST
Simon Fraser (smfr)
Comment 2 2021-03-11 13:53:12 PST
Comment on attachment 422916 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=422916&action=review > Source/WebCore/rendering/RenderBox.cpp:5101 > + if (!style().hasAspectRatio() || isTablePart()) This would be cleaner if you had a function called ignoresAspectRatio() or something.
Rob Buis
Comment 3 2021-03-12 02:51:04 PST
Rob Buis
Comment 4 2021-03-12 07:31:04 PST
Comment on attachment 422916 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=422916&action=review >> Source/WebCore/rendering/RenderBox.cpp:5101 >> + if (!style().hasAspectRatio() || isTablePart()) > > This would be cleaner if you had a function called ignoresAspectRatio() or something. Sure, done.
EWS
Comment 5 2021-03-15 23:55:54 PDT
Committed r274467: <https://commits.webkit.org/r274467> All reviewed patches have been landed. Closing bug and clearing flags on attachment 423028 [details].
Radar WebKit Bug Importer
Comment 6 2021-03-15 23:56:20 PDT
Note You need to log in before you can comment on or make changes to this bug.