Fix table-element-001.html https://bugs.webkit.org/show_bug.cgi?id=223063

Patch by Rob Buis <rbuis@igalia.com> on 2021-03-15
Reviewed by Simon Fraser.

Source/WebCore:

The aspect-ratio property should not apply to table boxes [1].
Tables themselves should respect the property.

[1] https://drafts.csswg.org/css-sizing-4/#aspect-ratio

* rendering/RenderBox.cpp:
(WebCore::RenderBox::computeLogicalHeight const):
(WebCore::RenderBox::shouldIgnoreAspectRatio const):
(WebCore::RenderBox::shouldComputeLogicalHeightFromAspectRatio const):
(WebCore::RenderBox::shouldComputeLogicalWidthFromAspectRatio const):
* rendering/RenderBox.h:

LayoutTests:

Enable test that passes now.

* TestExpectations:

Canonical link: https://commits.webkit.org/235323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@274467 268f45cc-cd09-0410-ab3c-d52691b4dbfc